# angkor-displayctl

./: .gitignore  .snapcraftignore  Makefile  README.md  displayctl-gui.desktop  displayctl-gui.sh  displayctl-watch.service  displayctl.1  displayctl.sh  gpg.key  pyproject.toml  setup.cfg  setup.py  test-fix.sh
apt-repo/: install.sh  serve.sh
apt-repo/dists/focal/: Release  Release.gpg
apt-repo/dists/focal/main/binary-amd64/: Release
apt-repo/dists/jammy/: InRelease  Release
apt-repo/dists/jammy/main/binary-amd64/: Release
apt-repo/dists/jammy/main/source/: Release
apt-repo/dists/noble/: Release
apt-repo/dists/noble/main/binary-amd64/: Release
completions/bash/: displayctl
completions/zsh/: _displayctl
conf/: distributions
debian/: changelog  control  copyright  displayctl.install  install  postinst  rules
displayctl/: __init__.py  cli.py  display.py  gui.py  hotplug.py  profile.py  tui.py  utils.py
displayctl/backends/: __init__.py  base.py  gnome.py  wayland.py  xrandr.py
dists/focal/: InRelease
dists/focal/main/binary-arm64/: Release
dists/focal/main/source/: Release
dists/jammy/: Release.gpg
dists/jammy/main/binary-arm64/: Packages  Release
dists/noble/: InRelease  Release.gpg
dists/noble/main/binary-arm64/: Release
pool/main/d/displayctl/: displayctl_1.0.0-1_all.deb
scripts/: add-to-repo.sh  build-deb.sh  gen-gpg-key.sh  setup-apt-repo.sh
snap/: snapcraft.yaml
snap/gui/: displayctl-gui.desktop  displayctl.desktop
tests/: test_backends.py  test_cli.py  test_profiles.py  test_regressions.py
(+1 files in other folders)
